--- a/bower.json
+++ b/bower.json
@@ -13,10 +13,19 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-ui-calendar": "latest",
+    "angular-bootstrap-calendar": "~0.7.4",
+    "moment": "~2.9.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
+  },
+  "resolutions": {
+    "bootstrap": "~3.3.1",
+    "angular": ">= 1.0.8",
+    "angular-bootstrap": "~0.12.0",
+    "moment": "~2.9.0"
   }
 }
