--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-ui-router": "~0.2.10",
     "angular-ui-calendar": "latest",
     "angular-bootstrap-calendar": "~0.7.4",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "moment-timezone": "~0.3.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
